hphp/test/quick/cnvStr.php.expectf
string(0) ""
string(0) ""
string(1) "1"
string(1) "1"
string(3) "1.1"
string(3) "abc"
HipHop Notice: Array to string conversion in %s
string(5) "Array"
string(3) "a C"
string(0) ""
string(0) ""
string(1) "1"
string(1) "0"
string(1) "1"
string(1) "0"
string(3) "1.1"
string(3) "abc"
string(3) "a C"
HipHop Notice: Array to string conversion in %s
string(5) "Array"
HipHop Notice: Array to string conversion in %s
string(5) "Array"
HipHop Fatal error: Object of class D could not be converted to string in %s on line 4
